--- a/index.html
+++ b/index.html
@@ -3,20 +3,65 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Angela's Portfolio</title>
+  <title>Resume</title>
 </head>
 
 <body>
-  <h1>Angela Yu's Portfolio</h1>
-  <h2>I'm a Web Developer</h2>
+  <h1>Anas Al-Sawalhy</h1>
+  <img src="./profile-img.png" alt="my photo" height="100">
+
+  <h2>Summary</h2>
+  <p>i am good developer (:</p>
   <hr />
-  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <h2>Education</h2>
+  <ul>
+    <li>Bachelor of Software Engineering,The World Islamic Sciences and Education University (2022-(expeted)2026)</li>
+  </ul>
   <hr />
-  <a href="./public/about.html">About Me</a>
-  <a href="./public/contact.html">Contact Me</a>
+  <h2>Work Experience</h2>
+  <ul>
+    <li>
+      <h3>intren - xyz.</h3>
+      <p>June 2014 - May 2018</p>
+      <ul>
+        <li>Answered customer inquiries via phone and email</li>
+        <li>Resolved customer complaints and issues</li>
+        <li>Maintained customer records and updated account information</li>
+      </ul>
+    </li>
+    <hr />
+  <h2>projects</h2>
+    <ul>
+    <li>
+      <h3>book ect</h3>
+      <ul>
+        <li>Answered customer inquiries via phone and email</li>
+        <li>Resolved customer complaints and issues</li>
+        <li>Maintained customer records and updated account information</li>
+      </ul>
+    </li>
+  </ul>
+  <hr />
+  <h2>Skills</h2>
+  <ul>
+    <li>Customer service: ⭐️⭐️⭐️⭐️⭐️</li>
+    <li>Microsoft Office Suite: ⭐️⭐️⭐️</li>
+    <li>Organizational skills: ⭐️⭐️⭐️⭐️</li>
+  </ul>
+  <hr />
+  <h2>Awards and Certifications</h2>
+  <ul>
+    <li>Employee of the Month - ABC Inc. (August 2016)</li>
+  </ul>
+  <hr />
+  <h2>Other</h2>
+  <ul>
+    <li><a href="./hobbies.html">My Hobbies</a></li>
+    <li><a href="./contact.html">Contact Me</a></li>
+  </ul>
+  <footer>
+    <p>© Jane Doe. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
